--- a/systemssolver/interface/templates/index.html
+++ b/systemssolver/interface/templates/index.html
@@ -16,61 +16,69 @@
     </div>
     <div>
         <div>
-        <h2>Objectives</h2>
-        <form>
-            <select id="objectiveGoal">
-                <option value="maximize" selected="selected">Maximize</option>
-                <option value="minimize">Minimize</option>
-            </select>
-            <input id="objectiveExpression" type="text">
-            <input type="button" value="Add" id="addObjective">
-        </form>
-        <ul id="currentObjectives"></ul>
-    </div>
-    <div>
-        <h2>Constraints</h2>
-        <form>
-            <input type="text" id="constraintLeft">
-            <select id="constraintSign">
-                <option value="=" selected="selected">=</option>
-                <option value="<"><</option>
-                <option value="<="><=</option>
-                <option value=">">></option>
-                <option value=">=">>=</option>
-                <option value="!=">!=</option>
-            </select>
-            <input type="text" id="constraintRight">
-            <input type="button" value="Add" id="addConstraint">
-        </form>
-        <ul id="currentConstraints"></ul>
-    </div>
-    <div>
-        <h2>Variables</h2>
-        <ul id="currentVariables"></ul>
-    </div>
-    <div>
-        <h2>Solve</h2>
-        <form>
-            Method:
-            <select id="solverMethod">
-                <option value="simplex" selected="selected">Simplex</option>
-                <option value="<"><</option>
-                <option value="<="><=</option>
-                <option value=">">></option>
-                <option value=">=">>=</option>
-                <option value="!=">!=</option>
-            </select>
-            Debug:
-            <input type="checkbox" name="debug" id="solverDebug">
-            <input type="button" value="Solve!" id="solve">
-        </form>
-    </div>
-    <div>
-        <h2>Solution</h2>
-        <div id="solutionSpace">
-            <ul id="solutionValues">
+            <h2>Variables</h2>
+            <form>
+                Var name:
+                <input id="varName" type="text">
+                Is inverted:
+                <input type="checkbox" name="inverted" id="varInverted">
+                <input type="button" value="Set" id="setVariable">
+            </form>
+            <ul id="currentVariables"></ul>
+        </div>
+        <div>
+            <h2>Objectives</h2>
+            <form>
+                <select id="objectiveGoal">
+                    <option value="maximize" selected="selected">Maximize</option>
+                    <option value="minimize">Minimize</option>
+                </select>
+                <input id="objectiveExpression" type="text">
+                <input type="button" value="Add" id="addObjective">
+            </form>
+            <ul id="currentObjectives"></ul>
+        </div>
+        <div>
+            <h2>Constraints</h2>
+            <form>
+                <input type="text" id="constraintLeft">
+                <select id="constraintSign">
+                    <option value="=" selected="selected">=</option>
+                    <option value="<"><</option>
+                    <option value="<="><=</option>
+                    <option value=">">></option>
+                    <option value=">=">>=</option>
+                    <option value="!=">!=</option>
+                </select>
+                <input type="text" id="constraintRight">
+                <input type="button" value="Add" id="addConstraint">
+            </form>
+            <ul id="currentConstraints"></ul>
+        </div>
+        <div>
+            <h2>Solve</h2>
+            <form>
+                Method:
+                <select id="solverMethod">
+                    <option value="simplex" selected="selected">Simplex</option>
+                    <option value="<"><</option>
+                    <option value="<="><=</option>
+                    <option value=">">></option>
+                    <option value=">=">>=</option>
+                    <option value="!=">!=</option>
+                </select>
+                <!--  Debug:
+                <input type="checkbox" name="debug" id="solverDebug"> -->
+                <input type="button" value="Solve!" id="solve">
+            </form>
+        </div>
+        <div>
+            <h2>Solution</h2>
+            <div id="solutionSpace">
+                <ul id="solutionValues">
 
-            </ul>
+                </ul>
+            </div>
         </div>
     </div>
 </div>
