--- a/systemssolver/interface/templates/index.html
+++ b/systemssolver/interface/templates/index.html
@@ -18,9 +18,9 @@
         <div>
             <h2>Variables</h2>
             <form>
-                Var name:
+                Name:
                 <input id="varName" type="text">
-                Is inverted:
+                Inverted:
                 <input type="checkbox" name="inverted" id="varInverted">
                 <input type="button" value="Set" id="setVariable">
             </form>
